--- a/css/header-service.css
+++ b/css/header-service.css
@@ -262,6 +262,7 @@ header nav li {
         justify-content: space-between;
         align-items: center;
         padding: 1% 2% .5% 2%;
+        background: #fff;
     }
 
     nav ul {
